chore: prepare for Vercel and Render deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Environment Variables
+.env
+.env.local
+.env.*.local
+backend/.env
+backend/.env.local
+
 # Logs
 logs
 *.log
@@ -22,3 +29,30 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Upload directories
+uploads/
+storage/
+backend/uploads/
+backend/storage/
+tmp/
+temp/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+ai_service/__pycache__/
+ai_service/*.pyc
+
+# AI Models (large files)
+ai_service/models/*.onnx
+ai_service/models/*.h5
+ai_service/models/*.pb
+
+# Redis
+dump.rdb
+
+# Test files
+test_photo.png
+sample_upload.mp4
